# Computer-Vision-Project

./: CMakeLists.txt  README.md  can_result.txt  driller_result.txt  duck_result.txt  main.cpp  utilities.cpp  utilities.h
